# evopy

./: .gitignore  MIGRATION_NOTE.md  README.md  TODO.md  TODO.txt  autoheal_logs.py  cleanup.sh  code_efficiency.py  code_quality.py  console_utils.py  cross_platform.md  debug.bat  debug.ps1  debug.sh  decision_tree.py  dependency_manager.py  docker-compose.yml  docker_sandbox.py  docker_task_register.py  environment.yml  equation_simple.py  equation_solver.py  evo.py  evopy.bat  evopy.ps1  evopy.py  generate_report.py  generate_report_list.py  install.py  install.sh  monitor_resources.py  prepare_devopy_package.sh  pyproject.toml  register_task.py  report.sh  report.sh.backup  report_debug.sh  report_new.sh  requirements.txt  resource_monitor.sh  (+29 more)
api_services/: api_decorator.py  equation_api.py  run_services.sh  sql2text_api.py  text2docker_api.py  text2sql_api.py
devopy/: README.md  TODO.txt  __init__.py  api.py  auto_diag_import.py  auto_heal.py  auto_import.py  bootstrap.py  cli.py  config.py  dependency.py  evolution.py  llm.py  log_db.py  logger.py  main.py  orchestrator.py  output_utils.py  requirements.txt  setup.py  test_readme.sh
docs/: Gemfile  TESTING.md  _config.yml  cross_platform.md  docker_conversation.md  index.html  index.md  junior_programmer_skills.md  mermaid_test.md  project_guidelines.md  project_structure.md  sandbox_architecture.md  text2python_extensions.md  todo_list.md  variable_detection.md  web_interface.md
evopy/: __init__.py  evo.py
evopy_venv/: pyvenv.cfg
history/: 613622ac-f612-4cf9-b27b-1da0f413f851.json  (+1 more)
modules/: __init__.py  (+5 more)
(+239 files in other folders)
