[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evopy"
version = "0.1.0"
description = "Ewolucyjny Asystent - system konwersacyjny rozwijający się wraz z interakcjami"
readme = "README.md"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "pexpect",
    "psutil",
    "docker",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.scripts]
evopy = "evopy.evo:main"

[tool.setuptools]
packages = ["evopy"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
